--- a/assignment5.html
+++ b/assignment5.html
@@ -15,8 +15,8 @@
                 background-color:#00e;
                 color:#000;
             }
-            .panel-heading{
-                color:#00f;
+            .row{
+                background-color:#00f;
             }
                
         </style>
